src/test/ui/span/regions-close-over-type-parameter-2.nll.stderr
error[E0597]: `tmp0` does not live long enough
  --> $DIR/regions-close-over-type-parameter-2.rs:33:20
   |
LL |       let _ = {
   |  _____________-
LL | |         let tmp0 = 3;
LL | |         let tmp1 = &tmp0;
   | |                    ^^^^^ borrowed value does not live long enough
LL | |         repeater3(tmp1)
LL | |     };
   | |     -
   | |     |
   | |_____borrowed value only lives until here
   |       borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
